--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -11,9 +11,8 @@
         <span class="title">
             <h1>ABOUT US</h1>
         </span>
-        <p>Lorem ipsum dolor amet aesthetic put a bird on it green juice iceland four dollar toast unicorn craft beer scenester before they sold out flexitarian polaroid four loko shoreditch. Vape mixtape ramps, trust fund brooklyn sustainable af snackwave
-            fashion axe. Cliche palo santo unicorn mlkshk. Cred swag try-hard next level subway tile shabby chic. Small batch marfa asymmetrical chicharrones, truffaut pickled meh post-ironic man braid tacos. Four dollar toast fingerstache semiotics lyft
-            kinfolk bicycle rights normcore intelligentsia, try-hard cold-pressed.</p>
+        <p>For over ten years Hobo Seafood has provided the highest quality "wild caught" shrimp to their customers.  Owned and operated by Lee and Madge Williams Hobo Seafood is a family company that embodies the American entrepreneurial spirit.  We started
+            out with just one shrimp trawler and today it's fifteen trawlers and a distribution site.  In addition, Hobo Seafood employs nearly 100 people in rural Hyde County, NC.</p>
     </div>
     <div class="contact">
         <div class="contact-links">
