--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -215,6 +215,50 @@ body {
 }
 
 
+/* PRODUCTS */
+
+ul.products {
+    width: 80%;
+    background-color: white;
+    padding: 1em;
+    border: .5em black solid;
+    overflow: auto;
+}
+
+li.products {
+    border-bottom: 2px solid #000;
+    border-top: 1px solid #000;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+    margin-bottom: 5px;
+    clear: both;
+    overflow: hidden;
+}
+
+.products .product-name {
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.products .price {
+    font-size: 1.4rem;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+}
+
+.products img {
+    float: left;
+    width: 150px;
+    margin-right: 1rem;
+}
+
+
 /* PRODUCT */
 
 .products-wrapper {
@@ -229,28 +273,18 @@ body {
 .products-container {
     width: 70%;
     height: auto;
-    padding: 8em;
-    margin: 0 auto;
+    padding-top: 8em;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: left;
+    overflow: auto;
 }
 
-.products {
+div.products {
     width: 30%;
     height: auto;
     margin: 0 auto;
-}
-
-.product {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #ccc;
-    padding: .5em;
-    margin: 1em;
 }
 
 .product:hover {
@@ -270,6 +304,70 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+button,
+input[type=submit] {
+    text-transform: uppercase;
+    background: none;
+    border: 1px solid #000;
+    font-weight: 600;
+    font-size: 1.5rem;
+    font-family: 'Open Sans';
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+    position: relative;
+    z-index: 2;
+}
+
+button[disabled],
+input[type=submit][disabled] {
+    color: #d12028;
+    background: #fff;
+    border-color: #d12028;
+    -webkit-transform: rotate(-10deg) scale(2) translateX(50%) translateY(-50%);
+    transform: rotate(-10deg) scale(2) translateX(50%) translateY(-50%);
+}
+
+button[disabled]:hover,
+input[type=submit][disabled]:hover {
+    color: #d12028;
+    cursor: not-allowed;
+}
+
+button[disabled]:after,
+input[type=submit][disabled]:after {
+    display: none;
+}
+
+button:after,
+input[type=submit]:after {
+    content: '';
+    z-index: -1;
+    display: block;
+    background: #000;
+    position: absolute;
+    width: 100%;
+    height: 0;
+    left: 0;
+    top: 0;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+}
+
+button:hover,
+input[type=submit]:hover,
+button:focus,
+input[type=submit]:focus {
+    color: #fff;
+    outline: 0;
+}
+
+button:hover:after,
+input[type=submit]:hover:after,
+button:focus:after,
+input[type=submit]:focus:after {
+    height: 100%;
 }
 
 
@@ -293,10 +391,10 @@ body {
 }
 
 .snipcart-add-item {
-    background-color: #3F51B5;
+    background-color: white;
     font-size: 18px;
-    color: white;
-    border: 0px;
+    color: black;
+    border: 1px black solid;
     border-radius: 3%;
 }
 
@@ -317,13 +415,11 @@ body {
     margin-right: auto;
     margin-left: auto;
 }
-
 .container:before,
 .container:after {
     content: " ";
     display: table;
 }
-
 .container:after {
     clear: both;
 } */
@@ -334,13 +430,11 @@ body {
         width: 750px;
     }
 }
-
 @media (min-width: 992px) {
     .container {
         width: 970px;
     }
 }
-
 @media (min-width: 1200px) {
     .container {
         width: 1170px;
