--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,19 +1,38 @@
-<div class="products-container">
-
-    <div class="products row" *ngFor="let product of products; let i = index">
-        <div class="clearfix" *ngIf="i % 3 == 0"></div>
-        <div class="col-md-4" class="product">
-            <a class="product" routerLink="/product/{{ product._id }}">
-                <img src="{{ product.imageUrl }}" height="100" />
-                <span class="product-name">{{ product.name }}</span>
-            </a>
-            <p>${{ product.price }}</p>
-            <button class="snipcart-add-item" attr.data-item-name="{{ product.name }}" attr.data-item-id="{{ product._id }}" attr.data-item-image="{{ product.imageUrl }}" attr.data-item-price="{{ product.price }}" attr.data-item-description="{{ product.description }}"
-                data-item-url='https://wt-4b2a879e3bb5c630d65bc12c99321764-0.run.webtask.io/sanity-parser'>
+<div class="content-container">
+    <div class="products-container">
+        <!--
+        <div class="products row" *ngFor="let product of products; let i = index">
+            <div class="clearfix" *ngIf="i % 3 == 0"></div>
+            <div class="col-md-12" class="product">
+                <a class="product" routerLink="/product/{{ product._id }}">
+                    <img src="{{ product.imageUrl }}" height="100" />
+                    <span class="product-name">{{ product.name }}</span>
+                </a>
+                <p>${{ product.price }}</p>
+                <button class="snipcart-add-item" attr.data-item-name="{{ product.name }}" attr.data-item-id="{{ product._id }}" attr.data-item-image="{{ product.imageUrl }}" attr.data-item-price="{{ product.price }}" attr.data-item-description="{{ product.description }}"
+                    data-item-url='https://wt-4b2a879e3bb5c630d65bc12c99321764-0.run.webtask.io/sanity-parser'>
                     Add to cart
                 </button>
-        </div>
+            </div>
+        </div> -->
+        <ul class='products'>
+
+            <li class="products" *ngFor="let product of products; let i = index">
+                <img src="{{ product.imageUrl }}" height="100" />
+
+                <!-- <a class="product" routerLink="/product/{{ product._id }}"> -->
+                <span class="product-name">{{ product.name }}</span>
+                <!-- </a> -->
+                <p>${{ product.price }}</p>
+                <p>{{ product.description }}</p>
+
+                <button class="snipcart-add-item" attr.data-item-name="{{ product.name }}" attr.data-item-id="{{ product._id }}" attr.data-item-image="{{ product.imageUrl }}" attr.data-item-price="{{ product.price }}" attr.data-item-description="{{ product.description }}"
+                    data-item-url='https://wt-4b2a879e3bb5c630d65bc12c99321764-0.run.webtask.io/sanity-parser'>
+                    Add to cart
+                </button>
+            </li>
+        </ul>
+
     </div>
-</div>
-<div class="content-container">
+
 </div>
