--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,18 +1,24 @@
 <div class="landing">
-    <!-- <div class="shop-link">
-
-        <a class="shop-link" routerLink="/shop">
-            Click to shop selection
-        </a>
-    </div> -->
+    <app-products-component></app-products-component>
 </div>
 <div id="content" class="content-container">
     <div class="about">
-        <span class="title">
-            <h1>ABOUT US</h1>
-        </span>
+        <h1>ABOUT US</h1>
+        <br/>
         <p>For over ten years Hobo Seafood has provided the highest quality "wild caught" shrimp to their customers.  Owned and operated by Lee and Madge Williams Hobo Seafood is a family company that embodies the American entrepreneurial spirit.  We started
             out with just one shrimp trawler and today it's fifteen trawlers and a distribution site.  In addition, Hobo Seafood employs nearly 100 people in rural Hyde County, NC.</p>
+        <div class='info'>
+            <h2>275 Landing Rd</h2>
+            <h4>Swanquarter, NC</h4>
+            <h4>27885</h4>
+            <ul class="hours">
+                <li>
+                    <span class="day">Monday - Saturday</span>
+                    <span class="times">7AM - 5PM</span>
+                </li>
+                <br/>
+            </ul>
+        </div>
     </div>
     <div class="contact">
         <div class="contact-links">
@@ -22,21 +28,21 @@
                     <i class="fa fa-lg fa-phone"></i>&nbsp;
 
 
-                    <span>(252) 926-1415</span>
+                    <h1>(252) 926-1415</h1>
                 </li>
                 <li>
                     <a href="mailto:josh.friese@gmail.com?subject=Contact Us">
                         <i class="fa fa-envelope"></i>&nbsp;
 
 
-                        <span>Email Us</span>
+                        <h1>Email Us</h1>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.facebook.com/pages/Hobo-Seafood-Market/1815643578674744">
                         <i class="fa fa-lg fa-facebook"></i>&nbsp;&nbsp;
 
-                        <span>Facebook</span>
+                        <h1>Facebook</h1>
                     </a>
                 </li>
             </ul>
