added media queries for mobile optimization

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="contact">
         <div class="contact-links">
-            <ul>
+            <ul class="contact-links">
 
                 <li>
                     <i class="fa fa-lg fa-phone"></i>&nbsp;
