--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,7 +38,7 @@ body {
     -webkit-font-smoothing: antialiased;
     font-weight: 800;
     text-rendering: optimizeLegibility;
-    font-family: sans-serif;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 header,
@@ -141,10 +141,11 @@ h6 {
 
 .header a {
     text-decoration: none;
+    padding-bottom: 1em;
 }
 
 .header--big {
-    height: 10%;
+    height: 11%;
     margin-top: 1.5em;
     -webkit-box-shadow: 0.5px 0.9px 5px rgba(0, 0, 0, 0.1);
     box-shadow: 0.5px 0.9px 5px rgba(0, 0, 0, 0.1);
@@ -153,7 +154,7 @@ h6 {
 }
 
 .header--small {
-    height: 5%;
+    height: 6%;
     font-size: .5em;
     position: fixed;
     margin-top: 0em;
@@ -534,10 +535,10 @@ input[type=submit]:focus:after {
 
 /*
   ##Device = Low Resolution Tablets, Mobiles (Landscape)
-  ##Screen = B/w 481px to 767px
+  ##Screen = B/w 520px to 767px
 */
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 520px) and (max-width: 767px) {
     .products-container {
         width: auto;
     }
@@ -546,7 +547,7 @@ input[type=submit]:focus:after {
         font-size: .8em;
     }
     h1 {
-        font-size: 3em;
+        font-size: 2.5em;
     }
 }
 
@@ -556,7 +557,7 @@ input[type=submit]:focus:after {
   ##Screen = B/w 320px to 479px
 */
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 519px) {
     .products-container {
         width: auto;
         font-size: .8em;
@@ -571,15 +572,16 @@ input[type=submit]:focus:after {
     }
     .header {
         font-size: .5em;
-        padding-left: .2em;
+        padding-left: .3em;
     }
     .header--big {
         height: 5%;
-        margin-top: 3em;
+        font-size: .3em;
+        margin-top: 2.8em;
     }
     .header--small {
-        height: 2.5%;
-        font-size: .3em;
+        height: 4%;
+        font-size: .2em;
     }
     .about {
         width: 80%;
