--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 header,
