changed overflow settings and removed top menu bar

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -5,8 +5,9 @@
     <div class="about">
         <h1>ABOUT US</h1>
         <br/>
-        <p>For over ten years Hobo Seafood has provided the highest quality "wild caught" shrimp to their customers.  Owned and operated by Lee and Madge Williams Hobo Seafood is a family company that embodies the American entrepreneurial spirit.  We started
-            out with just one shrimp trawler and today it's fifteen trawlers and a distribution site.  In addition, Hobo Seafood employs nearly 100 people in rural Hyde County, NC.</p>
+        <p>For over ten years Hobo Seafood has provided the highest quality "wild caught" shrimp to their customers.  Owned and operated by Lee and Madge Williams, Hobo Seafood is a family company that embodies the American entrepreneurial spirit.
+            <br/>
+            <br/> We started out with just one shrimp trawler and today it's fifteen trawlers and a distribution site.  In addition, Hobo Seafood employs nearly 100 people in rural Hyde County, NC.</p>
         <div class='info'>
             <h2>275 Landing Rd</h2>
             <h4>Swanquarter, NC</h4>
