--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -146,7 +146,6 @@ h6 {
 
 .header--big {
     height: 11%;
-    margin-top: 1.5em;
     -webkit-box-shadow: 0.5px 0.9px 5px rgba(0, 0, 0, 0.1);
     box-shadow: 0.5px 0.9px 5px rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: blur(5px);
@@ -282,7 +281,7 @@ h4 {
     display: flex;
     justify-content: space-around;
     align-items: left;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 div.products {
@@ -297,7 +296,8 @@ ul.products {
     background-color: white;
     padding: 1em 4em 2em 2em;
     border: .5em black solid;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 li.products {
@@ -363,7 +363,7 @@ li.products {
     padding-top: .5em;
     padding-bottom: .5em;
     color: black;
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -383,7 +383,7 @@ input[type=submit] {
     border: 1px solid #000;
     font-weight: 600;
     font-size: 1.5rem;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
     position: relative;
@@ -597,7 +597,7 @@ input[type=submit]:focus:after {
         border: 0;
     }
     .footer {
-        font-size: .5em;
+        font-size: .3em;
     }
     /* split about and contact */
 }
