--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <!-- Header -->
     <div [ngClass]="{'header':true, 'header--big':!isShrunk, 'header--small':isShrunk}">
         <a href="/">
-            <h1>HOBO ⚓ SEAFOOD</h1>
+            <h1 class='title'>HOBO ⚓ SEAFOOD</h1>
         </a>
         <a href="#" class="snipcart-checkout checkout">
             <div class="snipcart-summary">
