fixed some linter errors in css and changed snipcart product url

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,6 +34,7 @@ ul {
 body {
     margin: 0;
     padding: 0;
+    transform: translate3d(0px, 0px, 0px);
     -webkit-transform: translate3d(0px, 0px, 0px);
     -webkit-font-smoothing: antialiased;
     font-weight: 800;
