--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -28,7 +28,7 @@
             <p>{{ product.description }}</p>
 
             <button class="snipcart-add-item" attr.data-item-name="{{ product.name }}" attr.data-item-id="{{ product._id }}" attr.data-item-image="{{ product.imageUrl }}" attr.data-item-price="{{ product.price }}" attr.data-item-description="{{ product.description }}"
-                data-item-url='https://wt-4b2a879e3bb5c630d65bc12c99321764-0.run.webtask.io/sanity-parser'>
+                data-item-url='/'>
                     Add to cart
                 </button>
         </li>
