Fixing some things

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -12,8 +12,8 @@
             <p>${{ product.price }}</p>
             <p>{{ product.description }}</p>
 
-            <button (click)="handleClick()" class="snipcart-add-item" attr.data-item-name="{{ product.name }}" attr.data-item-id="{{ product._id }}" attr.data-item-image="{{ product.imageUrl }}" attr.data-item-price="{{ product.price }}" attr.data-item-description="{{ product.description }}"
-                attr.data-item-url='/.netlify/functions/postJsonOutput' data-item-url='/.netlify/functions/postJsonOutput'>
+            <button (click)="handleClick(product._id)" class="snipcart-add-item" attr.data-item-name="{{ product.name }}" attr.data-item-id="{{ product._id }}" attr.data-item-image="{{ product.imageUrl }}" attr.data-item-price="{{ product.price }}" attr.data-item-description="{{ product.description }}"
+                attr.data-item-url='/.netlify/functions/postJsonOutput?id="{{ product._id }}"' >
                     Add to cart
                 </button>
 
